<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/text_repeat"
            android:icon="@drawable/ic_repeat_black_24dp"
            android:title="@string/repeat_menu" />
        <item
            android:id="@+id/download_stories"
            android:icon="@drawable/ic_cloud_download_black_24dp"
            android:title="@string/stories_menu" />
        <item
            android:id="@+id/send_message"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/message_menu" />
    </group>

    <item android:title="@string/more_menu">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/rate_review" />
        </menu>
    </item>

</menu>
