<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:transitionName="relative_container_3_transition"
    tools:ignore="UnusedAttribute"
    tools:context=".TextRepeater.Activities.MainActivity">

    <include
        android:id="@+id/toolbar_container"
        layout="@layout/toolbar_back"/>

    <ScrollView
        android:layout_below="@+id/toolbar_container"
        android:layout_above="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/saved_numbers_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/saved_numbers"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:transitionName="relative_container_3_transition"
                tools:ignore="UnusedAttribute"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/country_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:ccp_autoDetectCountry="true" />

                <EditText
                    android:id="@+id/text_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:digits="1234567890"
                    android:hint="Phone Number"
                    android:longClickable="false"
                    android:gravity="top"
                    android:layout_margin="5dp"
                    android:inputType="number" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/text_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:hint="Message"
                        android:longClickable="false"
                        android:gravity="top"
                        android:layout_margin="5dp"
                        android:inputType="text" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/button_save_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save_number" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <Button
                    android:id="@+id/send_message_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:text="@string/send_message"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/no_number_home_banner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
